test/fail_compilation/fail106.d
// 239

void main()
{
     "ABC"[2] = 's';
}
